adjust color text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="status">Online</div>
             </div>
         </div>
-        <div class="time-perfil"><p>11:30</p></div>
+        <div class="time-perfil"><p>Hoje 11:30</p></div>
     </div>
     <div class="send">
         <div class="name-time">
